# projekt-NPD

./: .gitignore  pyproject.toml  test.py  wynik_profilowania.txt
src/: library.py  main.py  wynik_profilowania.txt
src/projekt_npd_Herbert_Daca.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
